<resources>
    <string name="app_name">Church App</string>
    <string name="church_name">CHURCH NAME</string>
    <string name="last_sent_message">Last sent message</string>
    <string name="user_name">User Name</string>
    <string name="church_members">Church Members</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="recenty_posted">Recenty Posted</string>
    <string name="welcome">WELCOME</string>
    <string name="most_liked_posts">Most Liked Posts</string>
    <string name="your_favs">Your Favs</string>
    <string name="home">Home</string>
    <string name="all_saved">All Saved</string>
    <string name="all_notes">All Notes</string>
    <string name="more">More</string>
    <string name="apps">Apps</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="forgot_password_reset_password">Forgot Password? Reset Password!</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="role">Role</string>
    <string name="need_help">Need Help?</string>
    <string name="have_an_account_sign_in">Have An Account? Sign In!</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_recent_notes">Your Recent Notes</string>
    <string name="notes">Notes</string>
    <string name="all_shuffled_notes">All Shuffled Notes</string>
    <string name="note">Note</string>
    <string name="message">Message...</string>
    <string name="ok_livhu">ok livhu</string>
    <string name="mr">Mr</string>
    <string name="miss">Miss</string>
    <string name="mrs">Mrs</string>
    <string name="none">none</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="pastor">Pastor</string>
    <string name="assistance">Assistance</string>
    <string name="member">Member</string>
    <string name="church">Church</string>
    <string name="public1">Public</string>
    <string name="what_do_you_wanna_say">What do you wanna say?</string>
    <string name="add_photos">Add Photos</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_a_profile_picture">Add A Profile Picture</string>
    <string name="add_background">Add Background</string>
    <string name="defaultText">----------</string>
    <string name="post">Post</string>
    <string name="no_photo_video">No Photo/Video</string>
</resources>