<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_SignUp">
    <LinearLayout
        android:id="@+id/profileTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_btm_sq_or"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="50sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_up"
        android:gravity="center"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profileTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/errorSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txSignIn"
        android:textColor="@color/red"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/questionsL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintTop_toBottomOf="@+id/errorSU">
        <RelativeLayout
            android:id="@+id/nameRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_sq_wh"
            android:padding="10dp"
            >
            <EditText
                android:id="@+id/nameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="0"
                android:hint="@string/name"
                android:textColorHint="@color/toDark"
                android:textColor="@color/toDark"
                android:inputType="text"
                android:background="@drawable/clear_bg"
                />
        </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/surnameRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_sq_wh"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/surnameIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="0"
                    android:hint="Surname"
                    android:textColorHint="@color/toDark"
                    android:textColor="@color/toDark"
                    android:inputType="text"
                    android:background="@drawable/clear_bg"
                    />
            </RelativeLayout>
        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/titleRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/rounded_sq_lg2"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_sq_wh"
                    android:padding="10dp"
                    android:clickable="true"
                    android:onClick="ShowTitles"
                    >
                    <TextView
                        android:id="@+id/titleIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/title"
                        android:visibility="visible"
                        android:textColor="@color/toDark"
                        android:background="@drawable/clear_bg"
                        />
                    <RadioGroup
                        android:id="@+id/titleGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">
                        <RadioButton
                            android:id="@+id/mrRB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mr"/>
                        <RadioButton
                            android:id="@+id/missRB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Miss"/>
                        <RadioButton
                            android:id="@+id/mrsRB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mrs"/>
                    </RadioGroup>
                </RelativeLayout>
            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/phoneRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_sq_wh"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/phoneIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="0"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/toDark"
                    android:textColor="@color/toDark"
                    android:inputType="text"
                    android:background="@drawable/clear_bg"
                    />
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/passwordRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_sq_wh"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/passwordIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="0"
                    android:hint="@string/password"
                    android:textColorHint="@color/toDark"
                    android:textColor="@color/toDark"
                    android:inputType="text"
                    android:background="@drawable/clear_bg"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/passwordCRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_sq_wh"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/passwordCIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="0"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/toDark"
                    android:textColor="@color/toDark"
                    android:inputType="text"
                    android:background="@drawable/clear_bg"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/roleRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_sq_wh"
                android:padding="10dp"
                android:clickable="true"
                android:onClick="ShowRoles"
                >
                <TextView
                    android:id="@+id/roleIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/role"
                    android:textColor="@color/toDark"
                    android:background="@drawable/clear_bg"
                    />
                <RadioGroup
                    android:id="@+id/roleGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <RadioButton
                        android:id="@+id/pastorRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Pastor"/>
                    <RadioButton
                        android:id="@+id/assistanceRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Assistance"/>
                    <RadioButton
                        android:id="@+id/memberRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Member"/>
                </RadioGroup>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/churchRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/rounded_sq_lg2"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_sq_wh"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/churchIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="0"
                    android:hint="@string/church_name"
                    android:textColorHint="@color/toDark"
                    android:textColor="@color/toDark"
                    android:inputType="text"
                    android:background="@drawable/clear_bg"
                    app:layout_constraintTop_toTopOf="parent"

                    />
                <LinearLayout
                    android:id="@+id/displayChurches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/churchIn">

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="SignUp"
            android:gravity="center"
            android:background="@drawable/rounded_sq_ora"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/unlockLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/home"
                android:tint="@color/toDark"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/toDark"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/dark"
        android:clickable="true"
        android:onClick="OpenSignIn"
        app:layout_constraintTop_toBottomOf="@id/questionsL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_help"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/dark"
        android:clickable="true"
        android:onClick="OpenHelp"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>