<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_SignIn">
    <LinearLayout
        android:id="@+id/profileTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_btm_sq_or"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="50sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in"
        android:gravity="center"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profileTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <RelativeLayout
        android:id="@+id/numberRL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/rounded_sq_lg2"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toBottomOf="@id/txSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_sq_wh">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/phoneNoLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/mobile"
                android:tint="@color/toDark"
                app:layout_constraintWidth_percent=".15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/phoneNoLogoError"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/mobile_pressed"
                android:tint="@color/red"
                app:layout_constraintWidth_percent=".15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/phoneNoIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:ems="0"
                android:hint="@string/phone_number"
                android:textColorHint="@color/toDark"
                android:textColor="@color/toDark"
                android:inputType="text"
                android:background="@drawable/clear_bg"
                app:layout_constraintWidth_percent=".8"
                app:layout_constraintStart_toEndOf="@id/phoneNoLogo"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/passwordRL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/rounded_sq_lg2"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toBottomOf="@id/numberRL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_sq_wh">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/passwordLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/key"
                android:tint="@color/toDark"
                app:layout_constraintWidth_percent=".15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/passwordLogoError"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/key_pressed"
                android:tint="@color/red"
                app:layout_constraintWidth_percent=".15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/passwordIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:ems="0"
                android:hint="@string/password"
                android:textColorHint="@color/toDark"
                android:textColor="@color/toDark"
                android:inputType="text"
                android:background="@drawable/clear_bg"
                app:layout_constraintWidth_percent=".8"
                app:layout_constraintStart_toEndOf="@id/passwordLogo"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
    <TextView
        android:id="@+id/errorSi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="10sp"
        android:textColor="@color/red"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/passwordRL"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/signInBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="SignIn"
        android:gravity="center"
        android:background="@drawable/rounded_sq_ora"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toBottomOf="@id/errorSi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/unlockLogo"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/unlock"
            android:tint="@color/toDark"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/toDark"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/dark"
        android:clickable="true"
        android:onClick="OpenSignUp"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_reset_password"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/dark"
        android:clickable="true"
        android:onClick="OpenResetPassword"
        app:layout_constraintTop_toBottomOf="@id/signUpBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>